force-app/main/default/objects/Ruta__c/fields/Estado_Ruta__c.field-meta.xml
<CustomField>
    <fullName>Estado_Ruta__c</fullName>
    <label>Estado Ruta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nueva</fullName>
                <default>true</default>
                <label>Nueva</label>
            </value>
            <value>
                <fullName>En Proceso</fullName>
            </value>
            <value>
                <fullName>Ruta Entregada</fullName>
            </value>
            <value>
                <fullName>Cerrada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>