force-app/main/default/objects/Ruta__c/fields/Rango_Horario__c.field-meta.xml
<CustomField>
    <fullName>Rango_Horario__c</fullName>
    <label>Rango Horario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>